--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
@@ -251,16 +251,16 @@ ASN Notation: {{ router_bgp.as_notation | arista.avd.default('asplain') }}
 {%             if peer_group.passive is arista.avd.defined(true) %}
 | Passive | True |
 {%             endif %}
-{%             if peer_group.missing_policy.address_family_all.direction_in_action.action is arista.avd.defined %}
-| Missing Policy In Action | {{ peer_group.missing_policy.address_family_all.direction_in_action.action }} |
-{%                 if peer_group.missing_policy.address_family_all.direction_in_action.include is arista.avd.defined %}
-| Missing Policy In Decision | {{ peer_group.missing_policy.address_family_all.direction_in_action.include }} |
+{%             if peer_group.missing_policy_af_all.direction_in.action is arista.avd.defined %}
+| Missing Policy In Action | {{ peer_group.missing_policy_af_all.direction_in.action }} |
+{%                 if peer_group.missing_policy_af_all.direction_in.include is arista.avd.defined %}
+| Missing Policy In Decision | {{ peer_group.missing_policy_af_all.direction_in.include }} |
 {%                 endif %}
 {%             endif %}
-{%             if peer_group.missing_policy.address_family_all.direction_out_action.action is arista.avd.defined %}
-| Missing Policy Out Action | {{ peer_group.missing_policy.address_family_all.direction_out_action.action }} |
-{%                 if peer_group.missing_policy.address_family_all.direction_out_action.include is arista.avd.defined %}
-| Missing Policy Out Decision | {{ peer_group.missing_policy.address_family_all.direction_out_action.include }} |
+{%             if peer_group.missing_policy_af_all.direction_out.action is arista.avd.defined %}
+| Missing Policy Out Action | {{ peer_group.missing_policy_af_all.direction_out.action }} |
+{%                 if peer_group.missing_policy_af_all.direction_out.include is arista.avd.defined %}
+| Missing Policy Out Decision | {{ peer_group.missing_policy_af_all.direction_out.include }} |
 {%                 endif %}
 {%             endif %}
 {%         endfor %}
@@ -378,16 +378,16 @@ ASN Notation: {{ router_bgp.as_notation | arista.avd.default('asplain') }}
 {%             endif %}
 {%             set ttl_maximum_hops = neighbor.ttl_maximum_hops | arista.avd.default(inherited.ttl_maximum_hops, "-") %}
 {%             set active_parameter.allowas_in = value_allowas | arista.avd.default(inherited.allowas_in, '-') %}
-{%             set missing_policy = neighbor.missing_policy.address_family_all %}
-{%             set missing_policy_in_action = missing_policy.direction_in_action.action | arista.avd.default("-") %}
-{%             set missing_policy_out_action = missing_policy.direction_out_action.action | arista.avd.default("-") %}
-{%             if missing_policy.direction_in_action.include is defined %}
-{%                 set missing_policy_in_decision = (missing_policy.direction_in_action.include | arista.avd.natural_sort | join(", ")) %}
+{%             set missing_policy = neighbor.missing_policy_af_all %}
+{%             set missing_policy_in_action = missing_policy.direction_in.action | arista.avd.default("-") %}
+{%             set missing_policy_out_action = missing_policy.direction_out.action | arista.avd.default("-") %}
+{%             if missing_policy.direction_in.include is defined %}
+{%                 set missing_policy_in_decision = (missing_policy.direction_in.include | arista.avd.natural_sort | join(", ")) %}
 {%             else %}
 {%                 set missing_policy_in_decision = "-" %}
 {%             endif %}
-{%             if missing_policy.direction_out_action.include is defined %}
-{%                 set missing_policy_out_decision = (missing_policy.direction_out_action.include | arista.avd.natural_sort | join(", ")) %}
+{%             if missing_policy.direction_out.include is defined %}
+{%                 set missing_policy_out_decision = (missing_policy.direction_out.include | arista.avd.natural_sort | join(", ")) %}
 {%             else %}
 {%                 set missing_policy_out_decision = "-" %}
 {%             endif %}
