--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
@@ -60,22 +60,26 @@
 {%                 set trigger_config = trigger_config ~ " end" %}
 {%             endif %}
 {%         elif handler.trigger is arista.avd.defined("on-counters") %}
+{%             set trigger_config = [] %}
 {%             if handler.trigger_on_counters.poll_interval is arista.avd.defined %}
-{%                 set trigger_config = "poll interval " ~ handler.trigger_on_counters.poll_interval %}
+{%                 do trigger_config.append("poll interval " ~ handler.trigger_on_counters.poll_interval) %}
 {%             endif %}
 {%             if handler.trigger_on_counters.condition is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ "<br>condition" ~ handler.trigger_on_counters.condition %}
+{%                 do trigger_config.append("condition" ~ handler.trigger_on_counters.condition) %}
 {%             endif %}
 {%             if handler.trigger_on_counters.granularity_per_source is arista.avd.defined(true) %}
-{%                 set trigger_config = trigger_config ~ "<br>granularity per-source" %}
+{%                 do trigger_config.append("granularity per-source") %}
 {%             endif %}
+{%             set trigger_config = trigger_config | join("<br>") %}
 {%         elif handler.trigger is arista.avd.defined("on-logging") %}
+{%             set trigger_config = [] %}
 {%             if handler.trigger_on_logging.poll_interval is arista.avd.defined %}
-{%                 set trigger_config = "poll interval " ~ handler.trigger_on_logging.poll_interval %}
+{%                 do trigger_config.append("poll interval " ~ handler.trigger_on_logging.poll_interval) %}
 {%             endif %}
 {%             if handler.trigger_on_logging.regex is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ "<br>regex " ~ handler.trigger_on_logging.regex %}
+{%                 do trigger_config.append("regex " ~ handler.trigger_on_logging.regex) %}
 {%             endif %}
+{%             set trigger_config = trigger_config | join("<br>") %}
 {%         elif handler.trigger is arista.avd.defined("on-intf") and handler.trigger_on_intf.interface is arista.avd.defined %}
 {%             if handler.trigger_on_intf.ip is arista.avd.defined(true) or
                 handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
