--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
@@ -59,19 +59,19 @@
 {%             elif handler.trigger_on_maintenance.action is arista.avd.defined("end") %}
 {%                 set trigger_config = trigger_config ~ " end" %}
 {%             endif %}
-{%         elif handler.trigger is arista.avd.defined("on-counters") %}
+{%         elif handler.trigger is arista.avd.defined("on-counters") and handler.trigger_on_counters is arista.avd.defined %}
 {%             set trigger_config = [] %}
 {%             if handler.trigger_on_counters.poll_interval is arista.avd.defined %}
 {%                 do trigger_config.append("poll interval " ~ handler.trigger_on_counters.poll_interval) %}
 {%             endif %}
 {%             if handler.trigger_on_counters.condition is arista.avd.defined %}
-{%                 do trigger_config.append("condition" ~ handler.trigger_on_counters.condition) %}
+{%                 do trigger_config.append("condition " ~ handler.trigger_on_counters.condition) %}
 {%             endif %}
 {%             if handler.trigger_on_counters.granularity_per_source is arista.avd.defined(true) %}
 {%                 do trigger_config.append("granularity per-source") %}
 {%             endif %}
 {%             set trigger_config = trigger_config | join("<br>") %}
-{%         elif handler.trigger is arista.avd.defined("on-logging") %}
+{%         elif handler.trigger is arista.avd.defined("on-logging") and handler.trigger_on_logging is arista.avd.defined %}
 {%             set trigger_config = [] %}
 {%             if handler.trigger_on_logging.poll_interval is arista.avd.defined %}
 {%                 do trigger_config.append("poll interval " ~ handler.trigger_on_logging.poll_interval) %}
