--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -219,21 +219,22 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
    {{ maximum_routes_cli }}
 {%         endif %}
-{%         for direction in ['in', 'out'] %}
-{%             set dir = 'direction_' ~ direction %}
-{%             set action = peer_group.missing_policy_af_all[dir].action %}
-{%             if action is arista.avd.defined %}
-{%                 set missing_policy_cli = "neighbor " ~ peer_group.name ~ " missing-policy address-family all" %}
-{%                 if peer_group.missing_policy_af_all[dir].include is arista.avd.defined %}
-{%                     set include_list = peer_group.missing_policy_af_all[dir].include | arista.avd.natural_sort %}
-{%                     set include_str = include_list | join(" ") %}
-{%                     set missing_policy_cli = missing_policy_cli ~ " include " ~ include_str ~ " direction " ~ direction ~ " action " ~ action %}
-{%                 else %}
+{%         if peer_group.missing_policy_af_all is arista.avd.defined %}
+{%             for direction in ['in', 'out'] %}
+{%                 set dir = 'direction_' ~ direction %}
+{%                 set action = peer_group.missing_policy_af_all[dir].action %}
+{%                 if action is arista.avd.defined %}
+{%                     set missing_policy_cli = "neighbor " ~ peer_group.name ~ " missing-policy address-family all" %}
+{%                     if peer_group.missing_policy_af_all[dir].include is arista.avd.defined %}
+{%                         set include_list = peer_group.missing_policy_af_all[dir].include | arista.avd.natural_sort %}
+{%                         set include_str = include_list | join(" ") %}
+{%                         set missing_policy_cli = missing_policy_cli ~ " include " ~ include_str %}
+{%                     endif %}
 {%                     set missing_policy_cli = missing_policy_cli ~ " direction " ~ direction ~ " action " ~ action %}
-{%                 endif %}
    {{ missing_policy_cli }}
-{%             endif %}
-{%         endfor %}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
 {%         if peer_group.link_bandwidth.enabled is arista.avd.defined(true) %}
 {%             set link_bandwidth_cli = "neighbor " ~ peer_group.name ~ " link-bandwidth" %}
 {%             if peer_group.link_bandwidth.default is arista.avd.defined %}
@@ -397,21 +398,22 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
    {{ maximum_routes_cli }}
 {%         endif %}
-{%         for direction in ['in', 'out'] %}
-{%             set dir = 'direction_' ~ direction %}
-{%             set action = neighbor.missing_policy_af_all[dir].action %}
-{%             if action is arista.avd.defined %}
-{%                 set missing_policy_cli = "neighbor " ~ neighbor.ip_address ~ " missing-policy address-family all" %}
-{%                 if neighbor.missing_policy_af_all[dir].include is arista.avd.defined %}
-{%                     set include_list = neighbor.missing_policy_af_all[dir].include | arista.avd.natural_sort %}
-{%                     set include_str = include_list | join(" ") %}
-{%                     set missing_policy_cli = missing_policy_cli ~ " include " ~ include_str ~ " direction " ~ direction ~ " action " ~ action %}
-{%                 else %}
+{%         if neighbor.missing_policy_af_all is arista.avd.defined %}
+{%             for direction in ['in', 'out'] %}
+{%                 set dir = 'direction_' ~ direction %}
+{%                 set action = neighbor.missing_policy_af_all[dir].action %}
+{%                 if action is arista.avd.defined %}
+{%                     set missing_policy_cli = "neighbor " ~ neighbor.ip_address ~ " missing-policy address-family all" %}
+{%                     if neighbor.missing_policy_af_all[dir].include is arista.avd.defined %}
+{%                         set include_list = neighbor.missing_policy_af_all[dir].include | arista.avd.natural_sort %}
+{%                         set include_str = include_list | join(" ") %}
+{%                         set missing_policy_cli = missing_policy_cli ~ " include " ~ include_str %}
+{%                     endif %}
 {%                     set missing_policy_cli = missing_policy_cli ~ " direction " ~ direction ~ " action " ~ action %}
-{%                 endif %}
    {{ missing_policy_cli }}
-{%             endif %}
-{%         endfor %}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
 {%         if neighbor.link_bandwidth.enabled is arista.avd.defined(true) %}
 {%             set link_bandwidth_cli = "neighbor " ~ neighbor.ip_address ~ " link-bandwidth" %}
 {%             if neighbor.link_bandwidth.default is arista.avd.defined %}
