--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
@@ -38,29 +38,29 @@
 {%         endif %}
 {%         if handler.trigger is arista.avd.defined("on-maintenance")
             and handler.trigger_on_maintenance.operation is arista.avd.defined
-            and handler.trigger_on_maintenance.action is arista.avd.defined
-            and (handler.trigger_on_maintenance.bgp_peer is arista.avd.defined
-                or handler.trigger_on_maintenance.interface is arista.avd.defined
-                or handler.trigger_on_maintenance.unit is arista.avd.defined) %}
-{%             set trigger_config = "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
-{%             if handler.trigger_on_maintenance.bgp_peer is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ " bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
-{%                 if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
-{%                     set trigger_config = trigger_config ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
+            and handler.trigger_on_maintenance.action is arista.avd.defined %}
+{%             set on_maintenance_cli = [] %}
+{%             for trigger in ["bgp_peer", "interface", "unit"] %}
+{%                 if handler.trigger_on_maintenance[trigger] is arista.avd.defined %}
+{%                     if trigger == "bgp_peer" %}
+{%                         do on_maintenance_cli.append("bgp " ~ handler.trigger_on_maintenance.bgp_peer) %}
+{%                         if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
+{%                             do on_maintenance_cli.append("vrf " ~ handler.trigger_on_maintenance.vrf) %}
+{%                         endif %}
+{%                     else %}
+{%                         do on_maintenance_cli.append(trigger ~ " " ~ handler.trigger_on_maintenance[trigger]) %}
+{%                     endif %}
 {%                 endif %}
-{%             elif handler.trigger_on_maintenance.interface is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ " interface " ~ handler.trigger_on_maintenance.interface %}
-{%             elif handler.trigger_on_maintenance.unit is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ " unit " ~ handler.trigger_on_maintenance.unit %}
-{%             endif %}
-{%             if handler.trigger_on_maintenance.action is arista.avd.defined("after") or handler.trigger_on_maintenance.action is arista.avd.defined("before") %}
-{%                 set trigger_config = trigger_config ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
-{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("all") %}
-{%                 set trigger_config = trigger_config ~ " all" %}
-{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("begin") %}
-{%                 set trigger_config = trigger_config ~ " begin" %}
-{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("end") %}
-{%                 set trigger_config = trigger_config ~ " end" %}
+{%             endfor %}
+{%             if on_maintenance_cli %}
+{%                 set trigger_config =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation ~ " " ~ on_maintenance_cli | join(" ") %}
+{%                 if handler.trigger_on_maintenance.action is arista.avd.defined %}
+{%                     if handler.trigger_on_maintenance.action in ["after", "before"] and handler.trigger_on_maintenance.stage is arista.avd.defined %}
+{%                         set trigger_config = trigger_config ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
+{%                     elif handler.trigger_on_maintenance.action in ["all", "begin", "end"] %}
+{%                         set trigger_config = trigger_config ~ " " ~ handler.trigger_on_maintenance.action %}
+{%                     endif %}
+{%                 endif %}
 {%             endif %}
 {%         elif handler.trigger is arista.avd.defined("on-counters") and handler.trigger_on_counters is arista.avd.defined %}
 {%             set trigger_config = [] %}
@@ -83,20 +83,19 @@
 {%                 do trigger_config.append("regex " ~ handler.trigger_on_logging.regex) %}
 {%             endif %}
 {%             set trigger_config = trigger_config | join("<br>") %}
-{%         elif handler.trigger is arista.avd.defined("on-intf") and handler.trigger_on_intf.interface is arista.avd.defined %}
-{%             if handler.trigger_on_intf.ip is arista.avd.defined(true) or
-                handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
-                handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
-{%                 set trigger_config = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
-{%                 if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
-{%                     set trigger_config = trigger_config ~ " operstatus" %}
+{%         elif handler.trigger is arista.avd.defined("on-intf") %}
+{%             set trigger = [] %}
+{%             for intf_change in ['operstatus', 'ip', 'ipv6'] %}
+{%                 if handler.trigger_on_intf[intf_change] is arista.avd.defined(true) %}
+{%                     if intf_change == "ipv6" %}
+{%                         do trigger.append("ip6") %}
+{%                     else %}
+{%                         do trigger.append(intf_change) %}
+{%                     endif %}
 {%                 endif %}
-{%                 if handler.trigger_on_intf.ip is arista.avd.defined(true) %}
-{%                     set trigger_config = trigger_config ~ " ip" %}
-{%                 endif %}
-{%                 if handler.trigger_on_intf.ipv6 is arista.avd.defined(true) %}
-{%                     set trigger_config = trigger_config ~ " ip6" %}
-{%                 endif %}
+{%             endfor %}
+{%             if trigger %}
+{%                 set trigger_config = "trigger on-intf " ~ handler.trigger_on_intf.interface ~ " " ~ trigger | join(" ") %}
 {%             endif %}
 {%         endif %}
 | {{ handler.name }} | {{ actions | arista.avd.default("-") }} | {{ handler.trigger | arista.avd.default("-") }} | {{ trigger_config | arista.avd.default("-") }} |
